# BlenderLite

./: CMakeLists.txt  ReadMe.md
include/: BlenderLite.hpp
include/core/: ApplicationState.hpp  Constants.hpp  TranslationLimits.hpp
include/rendering/: PrimitiveRenderer.hpp
include/ui/: Panels.hpp
src/: main.cpp
src/rendering/: PrimitiveRenderer.cpp
src/ui/: Panels.cpp
